# tlang

./: .gitignore  CMakeLists.txt  Makefile  Makefile.build  lang_spec.md  main.tt  tblgen.make
ast/: add_children.hh  ast_context.hh  ast_node.hh  ast_nodes.hh  attr.hh  decl.hh  decl_context.hh  node_kind.hh  nodes.hh  recursive_ast_visitor.hh  stmt.hh
common/: exception.hh  extent.hh  io.hh  macros.hh  source_range.hh  static_for.hh
driver/: driver.cc
examples/: CG.c  CG.tt  CG_parallel.tt  EP.c  EP.tt  EP_parallel.tt  main.c  main.cc  main.tt  mat_mult.tt  parallel_add.cc  util.hh  vecAdd.cc
include/ADT/: Identifier.hh  List.hh  Literal.hh  Reference.hh
include/AST/: ASTChildren.hh  ASTContext.hh  ASTNode.hh  AnyNode.hh  Api.hh  DeclContext.hh  Include.hh  SymbolTable.hh  TypeContext.hh  VisitorHelper.hh  add_children.hh  decl_context.hh  type.hh
include/Analysis/: Analysis.hh  AnalysisContext.hh  AnalysisInfo.hh  Stmt.hh
include/Basic/: ChildrenList.hh  Exception.hh  ParentList.hh  SourceRange.hh
include/CodeGen/: Backend.hh  CXXEmitter.hh  CodeEmitter.hh  CodeEmitterContext.hh  CodeGen.hh  CodeGenContext.hh  CodeGenUnit.hh  CodeGenVisitor.hh  Context.hh  DeclEmitter.hh  Emitter.hh  EmitterContext.hh  EmitterVisitor.hh  ExprEmitter.hh  GenericEmitter.hh  LLVMFwdTypes.hh  NVPTXEmitter.hh  StmtEmitter.hh  Target.hh  TypeEmitter.hh
include/Common/: Exception.hh  Io.hh  Macros.hh  Reference.hh  SourceRange.hh  StaticFor.hh  Utility.hh
include/Driver/: Arguments.hh  Driver.hh  driver.cc
include/Frontend/: CompilerInvocation.hh  CompilerOptions.hh
include/Io/: ASTIo.hh  CXX.hh  IOStream.hh  STDIo.hh  StringEmitter.hh
include/Lex/: CMakeLists.txt  Lexer.hh
include/Lexer/: Lexer.hh  lexer.hh
include/Parallel/: AddGpuFunctions.hh  Analysis.hh  AnalyzeRegions.hh  CollectContexts.hh  CreateConstructDatabase.hh  CreateParallelContextHierarchy.hh  GenerateConstructs.hh  ParallelCodeGen.hh  ParallelConstructDatabase.hh  Pipeline.hh  PrepareParallelContexts.hh  TransformContexts.hh  TransformLoops.hh
include/Parser/: CMakeLists.txt  Parser.hh  parser.cc
include/Passes/: PassManager.hh  Pipelines.hh  ResultManager.hh
include/Rewriter/: Rewriter.hh
include/Sema/: FirstSemaPass.hh  NameResolution.hh  Parent.hh  Scope.hh  SecondSemaPass.hh  Sema.hh  SymbolTablePass.hh  TypeInference.hh
include/Support/: Enumerate.hh  Format.hh  ReverseRange.hh  StaticFor.hh  UniqueStream.hh  Variant.hh
include/SymbolTable/: ClassTable.hh  IteratorsInterface.hh  SymbolTable.hh  TableInterface.hh
include/Transformation/: AddImplicit.hh  FixAS.hh  ParallelPipeline.hh
lang/: .gitignore  Makefile  langGen.py
lang/AST/: ast.py  astNode.py  confParser.py
lang/Conf/: attr.nodes  decl.nodes  grammar.conf  grammar.py  main.nodes  nodes.conf  nodes.py  stmt.nodes  toks.py  type.nodes
lang/Cxx/: enum.py  struct.py  type.py  util.py  variable.py
lang/Grammar/: confParser.py  db.py  generate.py  grammar.py  grammarParser.py  instruction.py  parseElements.py  parser.py  rule.py
lang/Lang/: action.py  db.py  generate.py  instruction.py  node.py  nodeParser.py  nodes.py  parser.py  rule.py  struct.py  type.py  variable.py
lang/Lexer/: db.py  generate.py  lexer.py  token.py
lang/Parser/: action.py  node.py  parseAction.py  rule.py  var.py
lang/Templates/: ParseExpr.cc  Parser.cc.j2  RecursiveASTVisitor.hh.j2  RecursiveASTVisitorBFS.hh.j2  header.hh.j2  lex.yy.j2  parserMethod.j2  recursive_ast_visitor.hh.j2  tokens.hh.j2  toks.hh.j2
lang/Utility/: dotDict.py  enum.py  format.py  parsing.py  struct.py  type.py  util.py  variable.py
lang/legacy/: lexTblGen.py  toks.yml
lexer/: CMakeLists.txt  lexer.hh  tblgen.py  toks.hh.j2  toks.yml
lib/AST/: AST.cmake  ASTContext.cc  ASTNode.cc  Api.cc  CMakeLists.txt  DeclContext.cc
lib/Analysis/: Analysis.cc  CMakeLists.txt
lib/CodeGen/: CMakeLists.txt  CodeGen.cc  CodeGenContext.cc  CodeGenUnit.cc  Decl.cc  DeclEmitter.cc  Emit.cc  EmitDecl.cc  EmitExpr.cc  EmitStmt.cc  EmitType.cc  Expr.cc  ExprEmitter.cc  GenericEmitter.cc  Stmt.cc  StmtEmitter.cc  Type.cc  TypeEmitter.cc
lib/CodeGen/Generic/: EmitType.cc
lib/Driver/: CMakeLists.txt  Driver.cc  Driver.cmake  ParseCMD.cc  ParseFiles.cc  arguments.hh  main.cxx
lib/Parallel/: AnalyzeRegions.cc  GenerateConstructs.cc  GenerateDevice.cc  GenerateHost.cc  Parallel.cmake  Pipeline.cc  TransformContexts.cc
lib/Parser/: CMakeLists.txt  Parser.cc  Parser.cmake
lib/Passes/: ParallelPipeline.cc  PassManager.cc  Passes.cmake  Pipelines.cc
lib/Rewriter/: Rewriter.cc
lib/Sema/: FixSymbolTable.cc  ResolveNames.cc  ResolveTypes.cc  Sema.cc  Sema.cmake  TypeInference.cc
lib/tmp/: CodeGenVisitor.hh  EmitExpr.cc  EmitStmt.cc  EmitType.cc  ParallelPipeline.cc
pact-samples/dot/: Makefile  dot.cc  dot.tt  util.hh
pact-samples/saxpy/: Makefile  add.tt  saxpy.cc
parser/: parser.cc  parser.hh
runtime/: CMakeLists.txt
runtime/include/: nvptx.h  parallel.h  tlang-device-nvptx.h  tlang-host.h
runtime/lib/: nvptx.cc  parallel.cc  tlang-device-nvptx.cc  tlang-host.cc
scripts/: CMake.make  flex.sh  run-cmd.py
tblgen/: .gitignore  CMakeLists.txt  Make.run  Makefile  driver.cc
tblgen/include/: AST.hh  ASTNode.hh  CXXUtility.hh  Constants.hh  TGUtility.hh  Utility.hh
tblgen/include/Emitters/: CodeGenEmitter.hh  CommonEmitter.hh  Emitter.hh  Emitters.hh  IncFileEmitter.hh  NodesEmitter.hh  TraitsEmitter.hh
tblgen/include/Infra/: AbstractNode.hh  Children.hh  CodeSection.hh  Common.hh  Enum.hh  Specifier.hh  Variable.hh  Visibility.hh
tblgen/lib/: ASTNode.cc  CXXUtility.cc  TGUtility.cc  Utility.cc
tblgen/lib/Emitters/: CodeGenEmitter.cc  CommonEmitter.cc  HeaderEmitter.cc  IncFileEmitter.cc  SourceEmitter.cc  TraitsEmitter.cc
tblgen/nodes/: Attr.td  CodeGen.td  Common.td  Decl.td  Expr.td  Stmt.td  Traits.td  Type.td
tblgen/td/: ASTNode.td
tblgen/td/Infra/: Children.td  CodeSection.td  Enum.td  Specifier.td  Variable.td  Visibility.td
tmp/: ExprEmitter.cc  StmtEmitter.hh  TypeEmitter.hh
tools/: ast.yml  astTblGen.py
tools/ast/: lexTokens.py  node.py  (+6 more)
(+29 files in other folders)
