cmake_minimum_required(VERSION 3.10)

project(tlang VERSION 0.42 LANGUAGES CXX)

#set(CMAKE_BUILD_TYPE Release)
set(CMAKE_COLOR_MAKEFILE ON)
set(CMAKE_VERBOSE_MAKEFILE ON)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

find_package(LLVM REQUIRED CONFIG)
find_package(fmt)
find_package(Boost 1.70.0 COMPONENTS program_options) 

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)

function(add_lib TARGET_LIB SOURCES_LIST USE_LLVM USE_BOOST USE_FRMT EXTRA_LIBS)
    set(TARGET_INC_DIRS "")
    set(TARGET_LIB_DIRS "")
    set(TARGET_LIBS "")
	add_library(${TARGET_LIB} STATIC ${SOURCES_LIST})
	if (${USE_LLVM})
      list(APPEND TARGET_INC_DIRS "${LLVM_INCLUDE_DIRS}")
      list(APPEND TARGET_LIB_DIRS "${LLVM_LIBRARY_DIR}")
      list(APPEND TARGET_LIBS "LLVM")
	endif()
	if (${USE_FRMT})
      list(APPEND TARGET_LIBS "fmt::fmt")
	endif()
	if (${USE_BOOST})
      list(APPEND TARGET_INC_DIRS "${Boost_INCLUDE_DIRS}")
      list(APPEND TARGET_LIBS "${Boost_LIBRARIES}")
	endif()
    list(APPEND TARGET_LIBS ${EXTRA_LIBS})
	target_include_directories(${TARGET_LIB} PRIVATE ${TARGET_INC_DIRS})
	target_link_directories(${TARGET_LIB} PRIVATE ${TARGET_LIB_DIRS} ${CMAKE_CURRENT_BINARY_DIR})
	target_link_libraries(${TARGET_LIB} ${TARGET_LIBS})
endfunction()

function(add_exec TARGET_EXEC MAIN USE_LLVM USE_BOOST USE_FRMT EXTRA_LIBS)
    message(STATUS "Building target ${TARGET_EXEC} with: LLVM: ${USE_LLVM}, BOOST: ${USE_BOOST}, FRMT: ${USE_FRMT}, LIBS: ${EXTRA_LIBS}")
    set(TARGET_INC_DIRS "")
    set(TARGET_LIB_DIRS "")
    set(TARGET_LIBS "")
	add_executable(${TARGET_EXEC} ${MAIN})
	if (${USE_LLVM})
      list(APPEND TARGET_INC_DIRS "${LLVM_INCLUDE_DIRS}")
      list(APPEND TARGET_LIB_DIRS "${LLVM_LIBRARY_DIR}")
      list(APPEND TARGET_LIBS "LLVM")
	endif()
	if (${USE_FRMT})
      list(APPEND TARGET_LIBS "fmt::fmt")
	endif()
	if (${USE_BOOST})
      list(APPEND TARGET_INC_DIRS "${Boost_INCLUDE_DIRS}")
      list(APPEND TARGET_LIBS "${Boost_LIBRARIES}")
	endif()
    list(APPEND TARGET_LIBS ${EXTRA_LIBS})
	target_include_directories(${TARGET_EXEC} PRIVATE ${TARGET_INC_DIRS})
	target_link_directories(${TARGET_EXEC} PRIVATE ${TARGET_LIB_DIRS} ${CMAKE_CURRENT_BINARY_DIR})
	target_link_libraries(${TARGET_EXEC} ${TARGET_LIBS})
endfunction()

include(lib/AST/AST.cmake)
include(include/Lex/CMakeLists.txt) 
include(lib/Parser/Parser.cmake)
include(lib/Sema/Sema.cmake)
include(lib/Passes/Passes.cmake)
include(lib/CodeGen/CMakeLists.txt)
#include(lib/Analysis/CMakeLists.txt)
include(lib/Driver/Driver.cmake)

add_exec(tlang lib/Driver/main.cxx #[[USE_LLVM]] ON #[[USE_BOOST]] ON #[[USE_FRMT]] OFF "driver;ast;lex;parser;sema;rewriter;codegen;ast")

