cmake_minimum_required(VERSION 3.10)

project(tlang VERSION 0.42 LANGUAGES CXX)

#set(CMAKE_BUILD_TYPE Release)
set(CMAKE_C_COMPILER "clang")
set(CMAKE_CXX_COMPILER "clang++")
set(CMAKE_COLOR_MAKEFILE ON)
set(CMAKE_VERBOSE_MAKEFILE ON)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

find_package(LLVM REQUIRED CONFIG)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)


execute_process(COMMAND llvm-config-13 --libs OUTPUT_VARIABLE LLVM_CONFIG_LIBS)
string(STRIP ${LLVM_CONFIG_LIBS} LLVM_CONFIG_LIBS)
add_definitions(-w)
function(add_lib TARGET_LIB SOURCES_LIST USE_LLVM EXTRA_LIBS)
    set(TARGET_INC_DIRS "")
    set(TARGET_LIB_DIRS "")
    set(TARGET_LIBS "")
    add_library(${TARGET_LIB} STATIC ${SOURCES_LIST})
    if (${USE_LLVM})
      list(APPEND TARGET_INC_DIRS "${LLVM_INCLUDE_DIRS}")
      list(APPEND TARGET_LIB_DIRS "${LLVM_LIBRARY_DIR}")
      list(APPEND TARGET_LIBS "${LLVM_AVAILABLE_LIBS}")
    endif()
    list(APPEND TARGET_LIBS ${EXTRA_LIBS})
    target_include_directories(${TARGET_LIB} PRIVATE ${TARGET_INC_DIRS})
    target_link_directories(${TARGET_LIB} PRIVATE ${TARGET_LIB_DIRS} ${CMAKE_CURRENT_BINARY_DIR})
#    target_link_libraries(${TARGET_LIB} ${TARGET_LIBS})
	target_link_options(${TARGET_LIB} PRIVATE ${LLVM_CONFIG_LIBS})
endfunction()

function(add_exec TARGET_EXEC MAIN USE_LLVM EXTRA_LIBS)
    message(STATUS "Buildingexecute_process(COMMAND llvm-config --libs OUTPUT_VARIABLE LIBS) target ${TARGET_EXEC} with: LLVM: ${USE_LLVM}, LIBS: ${EXTRA_LIBS}")
    set(TARGET_INC_DIRS "")
    set(TARGET_LIB_DIRS "")
    set(TARGET_LIBS "")
    add_executable(${TARGET_EXEC} ${MAIN})
    if (${USE_LLVM})
      list(APPEND TARGET_INC_DIRS "${LLVM_INCLUDE_DIRS}")
      list(APPEND TARGET_LIB_DIRS "${LLVM_LIBRARY_DIR}")
#      list(APPEND TARGET_LIBS "${LLVM_AVAILABLE_LIBS}")
    endif()
    list(APPEND TARGET_LIBS ${EXTRA_LIBS})
    target_include_directories(${TARGET_EXEC} PRIVATE ${TARGET_INC_DIRS})
    target_link_directories(${TARGET_EXEC} PRIVATE ${TARGET_LIB_DIRS} ${CMAKE_CURRENT_BINARY_DIR})
    target_link_libraries(${TARGET_EXEC} ${TARGET_LIBS})
	target_link_options(${TARGET_EXEC} PRIVATE ${LLVM_CONFIG_LIBS})
endfunction()

include(lib/AST/AST.cmake)
include(include/Lex/CMakeLists.txt) 
include(lib/Parser/Parser.cmake)
include(lib/Sema/Sema.cmake)
include(lib/Passes/Passes.cmake)
include(lib/Parallel/Parallel.cmake)
include(lib/CodeGen/CMakeLists.txt)
include(lib/Driver/Driver.cmake)

add_exec(tlang lib/Driver/main.cxx #[[USE_LLVM]] ON "driver;ast;lex;parser;sema;parallel;passes;parallel;codegen;ast;${LLVM_CONFIG_LIBS}")
install(TARGETS tlang DESTINATION bin)

#add_subdirectory(runtime/)
